# kcris-mcp-server

./: .env  README.en.md  README.md  pyproject.toml
src/kcris_mcp_server/: __init__.py  __main__.py  api.py  server.py
